# reduced-kinetic-models-solver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  requirements.txt  tash
data/geo/: box.geo  room_cross_xy.geo  room_network_4.geo
data/mesh/: .gitignore  unit_square_nx128_ny128.msh
examples/: m1_3d_main.c  sn_3d_main.c  solve_2d_sn.py  solve_3d_m1.py  solve_3d_pn.py  solve_3d_sn.py  solve_m1.py  solve_pn.py  solve_sn.py
examples/moments_3d_s2_order1/: moments_3d_s2_order1_line_pt10_05_05_pt210_05_05_t0.csv  moments_3d_s2_order1_line_pt10_05_05_pt210_05_05_t10.csv  moments_3d_s2_order1_slice_pt05_05_05_vn0_0_1_t0.csv  moments_3d_s2_order1_slice_pt05_05_05_vn0_0_1_t10.csv  simulation_parameters.json
examples/moments_3d_s2_order1_alpha_0/: test.pvsm
examples/spherical_harmonics_2d_order1/: fig.tex  fig_contourtmp0.script  fig_contourtmp0.table  foo.csv  test_plot.py
examples/spherical_harmonics_2d_order3/: simulation_parameters.json
examples/spherical_harmonics_3d_order11/: simulation_parameters.json
examples/spherical_harmonics_3d_order3/: simulation_parameters.json  spherical_harmonics_3d_order3_line_pt10_05_05_pt210_05_05_t0.csv  spherical_harmonics_3d_order3_line_pt10_05_05_pt210_05_05_t10.csv  spherical_harmonics_3d_order3_line_pt10_05_05_pt210_05_05_t150.csv  spherical_harmonics_3d_order3_slice_pt05_05_05_vn0_0_1_t0.csv  spherical_harmonics_3d_order3_slice_pt05_05_05_vn0_0_1_t10.csv  spherical_harmonics_3d_order3_slice_pt05_05_05_vn0_0_1_t150.csv
modules/: __init__.py
modules/mesh/: __init__.py  _element.py  mesh.py
(+49 files in other folders)
